--- a/src/RGBStudio/frontend/makefile
+++ b/src/RGBStudio/frontend/makefile
@@ -1,55 +1,27 @@
-all:  ../build/editor.html ../build/css/editor.css ../build/script/editor.m.js ../build/script/editor.m.js.map
+all: frontend/dist/index.html
+frontend/dist/index.html: src/App.vue \
+src/components/ColorPickerAttribute.vue \
+src/components/CustomToolbar.vue \
+src/components/CustomToolbarButton.vue \
+src/components/GraphEditor.vue \
+src/graph/Interfaces/ColorPickerInterface.ts \
+src/graph/nodes/ActionNode.ts \
+src/graph/nodes/CustomNodeTypes.ts \
+src/graph/nodes/NodeGenerator.ts \
+src/graph/nodes/TestNode.ts \
+src/graph/RGBLightRunnerCommands.ts \
+src/InjectionKeys.ts \
+src/main.ts \
+src/router/index.ts \
+src/stores/counter.ts \
+src/util/CSEvent.ts \
+src/util/JSONRPC.ts \
+src/util/RGBStudioAPI.ts \
+src/util/RGBStudioMockAPI.ts \
+src/util/WebViewConnection.ts \
+src/views/EditorView.vue \
+src/views/HomeView.vue
+	npm run build
 
-#This is a last resort since node is extremely slow at starting up (3 seconds or so) delaying the entire build process every time you need to 
-#recompile RGBStudio which end up being extremly annoying to deal with, therefore we have a make file that checks if rollup should even 
-#be run, and then runs it, this is stupid, very stupid and this is a bad solution but who cares
-../build/script/editor.m.js ../build/script/editor.m.js.map: ts/editor.m.ts \
-ts/GraphEditor/ActionNode.ts \
-ts/GraphEditor/BoolAttribute.ts \
-ts/GraphEditor/ColorAttribute.ts \
-ts/GraphEditor/Connector.ts \
-ts/GraphEditor/GraphConnectorService.ts \
-ts/GraphEditor/GraphEditor.ts \
-ts/GraphEditor/GraphNode.ts \
-ts/GraphEditor/GraphNodeAttribute.ts \
-ts/GraphEditor/NumberAttribute.ts \
-ts/GraphEditor/TriggerNode.ts \
-ts/JSONRPC.ts \
-ts/SVGCompositor/behavior/AutoSizer.ts \
-ts/SVGCompositor/behavior/Dragifier.ts \
-ts/SVGCompositor/CSEvent.ts \
-ts/SVGCompositor/Line.ts \
-ts/SVGCompositor/StyleHelper.ts \
-ts/SVGCompositor/SVGCompositor.ts \
-ts/SVGCompositor/SVGScratchArea.ts \
-ts/SVGCompositor/ToolWindow.ts \
-ts/SVGCompositor/trait/Circular.ts \
-ts/SVGCompositor/trait/Clickable.ts \
-ts/SVGCompositor/trait/Hoverable.ts \
-ts/SVGCompositor/trait/Rectangular.ts \
-ts/SVGCompositor/trait/Resizing.ts \
-ts/SVGCompositor/Widget.ts \
-ts/SVGCompositor/WidgetAtom.ts \
-ts/SVGCompositor/WidgetConstructor.ts \
-ts/SVGCompositor/WidgetContainer.ts \
-ts/SVGCompositor/widgets/CheckboxInputWidget.ts \
-ts/SVGCompositor/widgets/Circle.ts \
-ts/SVGCompositor/widgets/ColorInputWidget.ts \
-ts/SVGCompositor/widgets/FitContentContainer.ts \
-ts/SVGCompositor/widgets/FlexBox.ts \
-ts/SVGCompositor/widgets/LineEnd.ts \
-ts/SVGCompositor/widgets/NumberInputWidget.ts \
-ts/SVGCompositor/widgets/PaddedContainer.ts \
-ts/SVGCompositor/widgets/StackPanel.ts \
-ts/SVGCompositor/widgets/TextInputWidget.ts \
-ts/SVGCompositor/widgets/TextWidget.ts \
-ts/util.ts \
-ts/WebViewConnection.ts \
-rollup.config.js
-	npx rollup -c rollup.config.js
-
-../build/css/editor.css: less/editor.less
-	npx less less/editor.less ../build/css/editor.css
-
-../build/editor.html: inline-html.js ../build/script/editor.m.js ../build/css/editor.css pages/editor.html
-	node inline-html.js "pages/editor.html" "../build/editor.html" "../build/"
+../build/editor.html: frontend/dist/index.html
+	node inlinehtml.js "frontend/dist/index.html" "../build/editor.html" "../frontend/dist/"
