--- a/src/RGBStudio/frontend/package.json
+++ b/src/RGBStudio/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "baklavajs": "^2.0.2-beta.0",
+    "node-html-parser": "^6.1.1",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
