--- a/src/RGBStudio/frontend/package.json
+++ b/src/RGBStudio/frontend/package.json
@@ -1,16 +1,29 @@
 {
   "name": "frontend",
-  "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit"
+  },
   "dependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
-    "cheerio": "^1.0.0-rc.10",
-    "html-inline-external": "^1.0.9",
-    "less": "^4.1.2",
-    "node-html-parser": "^5.2.0",
-    "rollup": "^2.63.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "typescript": "^4.5.4"
+    "baklavajs": "^2.0.2-beta.0",
+    "node-html-parser": "^6.1.1",
+    "pinia": "^2.0.23",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.5",
+    "vuetify": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.68",
+    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/tsconfig": "^0.1.3",
+    "npm-run-all": "^4.1.5",
+    "typescript": "~4.7.4",
+    "vite": "^3.1.8",
+    "vue-tsc": "^1.0.8"
   }
 }
