keytrigger can now trigger on any key

--- a/src/RGBStudio/frontend/makefile
+++ b/src/RGBStudio/frontend/makefile
@@ -1,11 +1,15 @@
 all: dist/index.html
 
 dist/index.html: src/App.vue \
+src/assets/VKTranslations.Nordic.csv \
 src/components/ColorPickerAttribute.vue \
 src/components/CustomToolbar.vue \
 src/components/CustomToolbarButton.vue \
 src/components/GraphEditor.vue \
+src/components/KeyCodePicker.vue \
+src/components/KeyCodePickerAttribute.vue \
 src/graph/Interfaces/ColorPickerInterface.ts \
+src/graph/Interfaces/KeyCodePickerInterface.ts \
 src/graph/nodes/ActionNode.ts \
 src/graph/nodes/CustomNodeTypes.ts \
 src/graph/nodes/NodeGenerator.ts \
@@ -16,6 +20,7 @@ src/main.ts \
 src/router/index.ts \
 src/stores/counter.ts \
 src/util/CSEvent.ts \
+src/util/CsvReader.ts \
 src/util/JSONRPC.ts \
 src/util/RGBStudioAPI.ts \
 src/util/RGBStudioMockAPI.ts \
